--- a/app.json
+++ b/app.json
@@ -44,6 +44,15 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow Diotrix to access your photos.",
+          "savePhotosPermission": "Allow Diotrix to save photos.",
+          "isAccessMediaLocationEnabled": true,
+          "granularPermissions": ["audio", "photo"]
+        }
       ]
     ],
     "experiments": {
