--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "react-native-zoom-toolkit": "^5.0.1",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
