feat: Update app icons and favicon paths; replace old assets with new ones for improved branding

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "diotrix",
     "version": "0.7.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icons/splash-icon.png",
     "scheme": "diotrix",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -28,7 +28,7 @@
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png",
+      "favicon": "./assets/icons/favicon.png",
       "bundler": "metro"
     },
     "plugins": [
