--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.8",
     "@shopify/flash-list": "2.0.2",
     "expo": "~54.0.12",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.13",
     "expo-file-system": "^19.0.17",
